<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/login_progress_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center" >

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.application.baatna.utils.EditTextRegular
            android:id="@+id/institutionEt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/institution"
            android:textColor="@color/zdhl6"
            android:textSize="@dimen/size15" />
        
        <LinearLayout
            android:id="@+id/subzone_search_list_view_container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/zhl"
            android:orientation="vertical"
            android:visibility="gone" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/separator_color" />

            <ListView
                android:id="@+id/subzone_search_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/zhl"
                android:cacheColorHint="@android:color/transparent"
                android:childDivider="@color/transparent1"
                android:divider="@color/zhl_darker"
                android:dividerHeight="@dimen/height1"/>
        </LinearLayout>
        
        <com.application.baatna.utils.EditTextRegular
            android:id="@+id/branch_Et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/branch"
            android:textColor="@color/zdhl6"
            android:textSize="@dimen/size15" />
        
        <LinearLayout
            android:id="@+id/branch_list_container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/zhl"
            android:orientation="vertical"
            android:visibility="gone" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/separator_color" />

            <ListView
                android:id="@+id/branch_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/zhl"
                android:cacheColorHint="@android:color/transparent"
                android:childDivider="@color/transparent1"
                android:divider="@color/zhl_darker"
                android:dividerHeight="@dimen/height1"/>
        </LinearLayout>

        <com.application.baatna.utils.EditTextRegular
            android:id="@+id/year_selector"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            android:textColor="@color/zdhl6"
            android:textSize="@dimen/size15" />
        
         <com.application.baatna.utils.EditTextRegular
            android:id="@+id/phone_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_number"
            android:textColor="@color/zdhl6"
            android:textSize="@dimen/size15" />

        <com.application.baatna.utils.TextViewBold
            android:id="@+id/submit_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/zomato_red"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/Login"
            android:textColor="@color/white"
            android:textSize="@dimen/size17" />

    </LinearLayout>
    <!-- For no internet connection which has retry -->

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <com.application.baatna.utils.IconView
            android:id="@+id/empty_view_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="k"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/height150" />

        <TextView
            android:id="@+id/empty_view_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_internet_message"
            android:textColor="@color/dark_grey" />

        <LinearLayout
            android:id="@+id/empty_view_retry_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_zdhl4_drawable"
            android:clickable="true"
            android:gravity="center" >

            <com.application.baatna.utils.IconView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="e"
                android:textColor="@color/z_grey_font_color"
                android:textSize="@dimen/size22" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>