<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/height48"
    android:background="@drawable/zomato_dark_feedback"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <com.application.baatna.utils.TextViewBold
            android:id="@+id/header_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/size16" />

        <com.application.baatna.utils.TextViewRegular
            android:id="@+id/header_subtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/size16"
            android:visibility="gone" />
    </LinearLayout>

    <com.application.baatna.utils.IconView
        android:id="@+id/header_button_left"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:background="@drawable/zomato_dark_feedback"
        android:clickable="true"
        android:gravity="center"
        android:onClick="goBack"
        android:text="&quot;"
        android:textColor="@color/white"
        android:textSize="@dimen/size16"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/header_button_right"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:background="@drawable/greenbuttonfeedback"
        android:clickable="false"
        android:gravity="center"
        android:onClick="proceed"
        android:visibility="gone" >

        <com.application.baatna.utils.IconView
            android:id="@+id/header_button_right_icon"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="9"
            android:textColor="@color/white"
            android:textSize="@dimen/size16"
            android:textStyle="bold" />
    </LinearLayout>

    <com.application.baatna.utils.TextViewRegular
        android:id="@+id/header_button_right_reset"
        android:layout_width="@dimen/height46"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/reset"
        android:textColor="@color/font_color"
        android:visibility="gone" />

    <com.application.baatna.utils.TextViewRegular
        android:id="@+id/header_powered_by_opentable"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical|right"
        android:text="@string/Powered_by_opentable"
        android:textColor="@color/font_color"
        android:textSize="@dimen/size12"
        android:visibility="gone" />

    <com.application.baatna.utils.TextViewRegular
        android:id="@+id/header_button_right_cancel"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/dialog_cancel"
        android:textColor="@color/white"
        android:visibility="gone" />

</RelativeLayout>