<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/zhl" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY" />

    <com.application.baatna.utils.TextViewRegular
        android:id="@+id/validity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textAllCaps="true"
        android:textColor="@color/zhl_dark"
        android:textSize="@dimen/size14" />

    <com.application.baatna.utils.TextViewItalics
        android:id="@+id/offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/logo"
        android:textAllCaps="true"
        android:textColor="@color/zhl_darkest"
        android:textSize="@dimen/size18" />

    <com.application.baatna.utils.TextViewRegular
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/offer"
        android:text="@string/terms"
        android:textAllCaps="true"
        android:textColor="@color/zhl_dark"
        android:textSize="@dimen/size14" />

    <RelativeLayout
        android:id="@+id/request_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/terms"
        android:background="@color/zhl1.5"
        android:padding="@dimen/size15" >

        <com.application.baatna.utils.TextViewRegular
            android:id="@+id/request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/redeem_request"
            android:textAllCaps="true"
            android:textColor="@color/zhl_darkest"
            android:textSize="@dimen/size14" />

        <com.application.baatna.utils.IconView
            android:id="@+id/request_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="F"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size45" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fulfill_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/request_container"
        android:padding="@dimen/size15" >

        <com.application.baatna.utils.IconView
            android:id="@+id/tick_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="G"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size45" />

        <com.application.baatna.utils.TextViewRegular
            android:id="@+id/fulfill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size15"
            android:layout_toRightOf="@id/tick_icon"
            android:text="@string/redeem_fulfill"
            android:textAllCaps="true"
            android:textColor="@color/zhl_darkest"
            android:textSize="@dimen/size14" />
    </RelativeLayout>

</RelativeLayout>